hphp/test/slow/parser/static_call_access_const_expr.php.expectf
Fatal error: Expected constant expression for initializer in %s/test/slow/parser/static_call_access_const_expr.php on line 10